# Desktop-Search-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
Indexer/: DocumentIDManager.cpp  DocumentIDManager.h  FileConstants.cpp  FileConstants.h  Indexer.cpp  Indexer.h  hash.cpp  hash.h  main.cpp
Interface/: Interface.cpp
Text Crawler/: main.cpp
Text-Crawler/: main.cpp
